--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>Page Title</title>
+<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 
-<h1>Modification titre</h1>
-<p>This is a paragraph.</p>
+<h1 class="ml1">
+  <span class="text-wrapper">
+    <span class="line line1"></span>
+    <span class="letters">BONJOUR</span> 
+    <span class="line line2"></span>
+  </span>
+</h1>
 
 </body>
 </html>
